--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -8,6 +8,7 @@
     <InlcudeMahAppsMetro>false</InlcudeMahAppsMetro>
 
     <DefineConstants Condition="$(InlcudeMahAppsMetro)">$(DefineConstants);MahApps_Metro</DefineConstants>
+    <TargetFramework>net6.0-windows</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
