--- a/Directory.build.props
+++ b/Directory.build.props
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0-windows;netcoreapp3.1;net462</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <LangVersion>latestmajor</LangVersion>
     
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
